--- a/web/css/main.css
+++ b/web/css/main.css
@@ -14,8 +14,9 @@ div.m {
 div.signin {
     padding: 20px;
     border-style: solid;
-    border-color: #cacaca;
     border-radius: 30px ;
+    border-color: #ffffff;
+    box-shadow: 0px 0px 50px #000000;
 }
 
 input.signin {
