--- a/web/css/main.css
+++ b/web/css/main.css
@@ -2,7 +2,7 @@ body,button, input, select, textarea,h1 ,h2, h3, h4, h5, h6 {
     font-family: Microsoft YaHei,'宋体' , Tahoma, Helvetica, Arial, "\5b8b\4f53", sans-serif;
 }
 
-body.signin {
+body.signIn {
     background-image: url("/img/登录界面.png");
 }
 
@@ -11,7 +11,7 @@ div.m {
     top: 20%;
 }
 
-div.signin {
+div.signIn {
     padding: 20px;
     border-style: solid;
     border-radius: 30px ;
@@ -19,11 +19,11 @@ div.signin {
     box-shadow: 0px 0px 50px #000000;
 }
 
-input.signin {
+input.signIn {
     margin: 2em auto;
 }
 
-button.signin {
+button.signIn {
 }
 
 h1.logo {
